<resources>
    <string name="app_name">Local Op</string>
    <string name="result_will_display_here">result will display here</string>
    <string name="staff_member">staff member</string>
    <string name="enter_your_age">enter your age</string>
    <string name="enter_your_name">enter your name</string>
    <string name="check_discount_eligibility">check discount eligibility</string>
    <string name="itstudent">ITStudent</string>
    <string name="banned_from_store">Banned from store</string>
</resources>